modified:   fichero.html

--- a/fichero.html
+++ b/fichero.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Hola</title>
+        <title>Holaaa</title>
         <link type="text/css" href="style.css" >
         <style>
         body{
@@ -15,6 +15,6 @@
            
     </head>
     <body>
-        <h1>Hola que hace</h1>
+        <h1>Hola que hace bien o que?</h1>
     </body>
     </html>
